Tareas/Tareas-MAGISTRAL/T6/figure-6-19/Grammar.g4
grammar Grammar;

// TOKENS
ID : [a-zA-Z_][a-zA-Z0-9_]*;
NUM : [0-9]+;
WS : [ \r\n\t]+ -> skip;

// rules
p: s+ #Program
;

s : ID '=' e #Assign
  ;

e : e op=('+'|'-')t #Sumres
| t # PassT
;

t : t op=('*'|'/') f #MulDiv
| f # PassF
;

f : '(' e ')' #PassE
| ID #Id
| NUM #Num
;
